fixing menu overflow

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -4,12 +4,12 @@
   /* justify-content: center; */
   /* background: rgb(21, 64, 75); */
   width: 66vw;
-  /* height: 100vh; */
+  height: 150vh;
   /* height: 100%; */
   /* height: 400px; */
   /* height: calc(var(--vh, 1vh) * 100); */
-  min-height: -webkit-fill-available;
-  overflow: auto;
+  /* min-height: -webkit-fill-available; */
+  /* overflow: auto; */
   /* text-align: left; */
   /* padding: 0px 0px 50px; */
   /* padding: 0px; */
@@ -54,9 +54,9 @@
   /* background: grey; */
   /* margin: auto; */
   /* height: 86vh; */
-  height: 120vh;
+  height: 150vh;
   min-height: -webkit-fill-available;
-  overflow: auto;
+  /* overflow: auto; */
   /* width: 100%; */
   width: 66vw;
 }
